input_textのvalueが空のとき、send_buttonをdisabledにする処理を追加（issue#15）
 - index.html内のsend_buttonにdisabledを追加
 - client.jsにおいてinput_textにtextChangedメソッドへのリスナー登録を行った。
 - client.jsにおいてinput_textのvalueを確認し、空であれば引数で与えられたbuttonをdisabledにするtextChangedメソッドの新規作成

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <div id="chatlog" class="output_contents"></div>
   <div id="input_area">
     <input type="text" id="input_text" class="input_contents" />
-    <input type="button" id="send_button" class="submit_contents" value="Send" />
+    <input type="button" id="send_button" class="submit_contents" value="Send" disabled />
   </div>
   <div id="idlogin_area">
     <input type="text" id="login_name" class="input_contents" maxlength="20" placeholder="input handle name in this area" />
